# solana-whale-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  errors.json  heroku.yml
.aws/: task-definition.json
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  mod.rs  solana_config.rs
src/bot/: commands.rs  mod.rs  telegram.rs  trading.rs
src/dex/: analyzer.rs  mod.rs  types.rs
src/dex/protocols/: jupiter.rs  mod.rs  raydium.rs
src/execution/: clients.rs  error.rs  executor.rs  mod.rs  retry.rs  types.rs
src/strategy/: analyzer.rs  mod.rs  types.rs
src/whale/: cache.rs  config.rs  detector.rs  mempool.rs  mod.rs  monitor.rs  types.rs
terraform/: ecs.tf  terraform.tfstate.backup  variables.tf  vpc.tf
