[package]
name = "solana_whale_trader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
teloxide = "0.13"
tokio = { version = "1.8", features = ["full"] }
solana-client = "2.1.11"
solana-sdk = "2.1.11"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockall = "0.13.1"
lru = "0.13.0"